k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 	theawscloud.live  # your domain or IP address
    http:
      paths:
      - path: /  # Route all traffic
        pathType: Prefix
        backend:
          service:
            name: spring-petclinic-service  # Name of your service
            port:
              number: 8081  # Port on which your service is running
